<?xml version="1.0"?>
<package format="3">
  <name>laser_rahcm_visualization</name>
  <version>0.0.0</version>
  <description>Pacote de visualização e controle do robô Chico Mendes no ROS 2</description>
  <maintainer email="your_email@example.com">Alysson Martim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>control_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>