<?xml version="1.0"?>
<package format="3">
  <name>laser_rahcm_visualization</name>
  <version>0.0.0</version>
  <description>Pacote de visualização do robô Chico Mendes no ROS 2</description>
  <maintainer email="seu_email@example.com">Alysson Martim</maintainer>
  <license>Apache-2.0</license>

  <!-- Ferramenta de build -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependências necessárias em tempo de build -->
  <depend>rclcpp</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Dependências necessárias em tempo de execução -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
