<package format="2">
  <name>rc_teleop</name>
  <version>0.3.5</version>
  <description>rc_teleop enables rc joint control with a joystick by
     processing joy/Joy messages and translating them to geometry_msgs/Twist.</description>

  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>joy</depend> 

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
